--- a/src/todo/appsettings.json
+++ b/src/todo/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+ 
+  "Serilog": {
+     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+      "MinimumLevel": "Debug",
+       "WriteTo": [ 
+        { "Name": "Console" },
+         { "Name": "File", "Args": { "path": "log.seq"} }
+        ] 
+    }
 }
+
